# paperstack

./: .gitignore  README.md  TECHNICAL_OVERVIEW_MCP_BACKEND.md  __init__.py  models.py  pyproject.toml  requirements.txt  test_smoke.py  tmp_debug_citation.py
.github/workflows/: paperstack-ci.yml
arxiv_mcp/: __init__.py
src/: __init__.py  cache.py  console.py  logger.py  maintenance.py  models.py
src/arxiv_client/: __init__.py
src/context_builder/: __init__.py
src/intelligence/: citation_graph.py  contribution_extractor.py  paper_comparator.py  semantic_index.py
src/intelligence/prompts/: comparison.txt  contributions.txt
src/mcp_server/: __init__.py  __main__.py
src/pdf_fetcher/: __init__.py
src/pdf_parser/: __init__.py
src/workflows/: db.py  explainer.py  reading_list.py  topic_watcher.py
