[project]
name = "paperstack-mcp"
version = "0.1.9"
description = "Model Context Protocol server for arXiv PDF retrieval and LLM context generation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "arxiv MCP Team"}]
dependencies = [
  "mcp==1.26.0",
  "arxiv==2.4.1",
  "httpx==0.27.2",
  "pymupdf==1.27.2.2",
  "pydantic>=2.10,<3",
  "tenacity==9.1.4",
  "tiktoken==0.12.0",
  "structlog==25.5.0",
  "aiofiles==25.1.0",
  "python-dotenv==1.2.2",
  "anyio==4.12.1",
  "urllib3==2.6.3",
  "protobuf==3.20.3",
  "beautifulsoup4==4.12.0",
  "lxml==5.0.0",
  "sentence-transformers==2.7.0",
  "chromadb==0.5.0",
  "ollama==0.2.0",
  "numpy==1.26.4"
]

[project.urls]
"Homepage" = "https://github.com/Aldrin-Joan/paperstack"
"Repository" = "https://github.com/Aldrin-Joan/paperstack"

[project.scripts]
paperstack-mcp = "src.console:entrypoint"

[tool.setuptools]
package-dir = {"" = ".", "src" = "src"}

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["arxiv_mcp", "paperstack_mcp", "src", "src.*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
